--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
   width: 8%
 }
 body {
-     font-family: Arial, sans-serif;
-      max-width: 600px;
+    font-family: Arial, sans-serif;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
     padding: 20px;
-        }
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
         
 .test {
  padding-left: 30px;
